#211 assert iterations unit test